IC-Prod/objects/CPP__c.object
<CustomObject>
    <description>Customer Product Profile</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPP</relationshipLabel>
        <relationshipName>CPP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AnnualUsageInPounds__c</fullName>
        <label>Total Annual LBs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualUsageInUOM__c</fullName>
        <label>Annual Usage in UOM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_LBS_by_Supplier__c</fullName>
        <label>Annual LBS by Supplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Producer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved Producer 1</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>CPP (Approved Producer)</relationshipLabel>
        <relationshipName>CPP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Producer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved Producer 2</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>CPP (Approved Producer 2)</relationshipLabel>
        <relationshipName>CPP2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Producer_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved Producer 3</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>CPP (Approved Supplier)</relationshipLabel>
        <relationshipName>CPPApprovedSupplier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Supplier_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved Supplier 2</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>CPP (Approved Supplier 2)</relationshipLabel>
        <relationshipName>CPP1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AverageOrderSize__c</fullName>
        <label>Average Order Size (# of pkgs)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barrier_to_Opportunity__c</fullName>
        <description>Various Reasons why this CPP does not have an opportunity associated.</description>
        <inlineHelpText>Barriers to procuring this competitive business.</inlineHelpText>
        <label>Barrier to Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>No Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Price Too Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Contract With Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Grade Not Available To Univar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistical/Operational Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Add Comments To Description)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculate_Estimated_Sales_Value__c</fullName>
        <description>Price Per pound times annual usage = estimated sales value.</description>
        <formula>CEILING( PriceperUOM__c   *  AnnualUsageInUOM__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculate Estimated Sales Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompetitiveProduct__c</fullName>
        <label>Competitive Product</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Exp_Date__c</fullName>
        <label>Contract Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does a contract exist?  Checked means &quot;Yes&quot;; unchecked means &quot;No&quot;.</description>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Sales_Value__c</fullName>
        <label>Estimated Sales Value</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB__c</fullName>
        <label>FOB</label>
        <picklist>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GS_E_Product_Manager__c</fullName>
        <formula>Product2Id__r.GS_E_Product_Manager__r.FirstName  + &quot; &quot; +  Product2Id__r.GS_E_Product_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GS&amp;E Product Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Cosmetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diaphragm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feed Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhibited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-compendial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parenteral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rayon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reagent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Producer_Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Producer Partner</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>CPP (IC Producer Partner)</relationshipLabel>
        <relationshipName>IC_Producer_Partner_CPPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IC_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IC Supplier</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>CPP (IC Supplier)</relationshipLabel>
        <relationshipName>Supplier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NonUnivarProductDesc__c</fullName>
        <label>Non Univar Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Univar_Product_Name__c</fullName>
        <label>Competitor Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Univar_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-UVX listed Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_of_CPP_Supplier_Info_Recs__c</fullName>
        <label># of CPP Supplier Info Recs</label>
        <summaryForeignKey>CPP_Supplier_Info__c.CPP__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Pkg</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini-Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supersack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tote</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percent_Other__c</fullName>
        <label>%/Other</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PriceperUOM__c</fullName>
        <label>$ per UOM</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priceperpound__c</fullName>
        <label>Price per pound</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricingUOM__c</fullName>
        <label>$ UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supersack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tote</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 49%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 - 79%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80 - 99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% (Won)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <description>The Producer of the Product.</description>
        <inlineHelpText>The Producer of the Product.</inlineHelpText>
        <label>Producer</label>
        <picklist>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME HARDESTY COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACP Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afton Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agrium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airgas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Pigment Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBEMARLE CORPORATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberdingk-Boley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albright &amp; Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcan Intl Network US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alco Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allchem Ind</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>CPP</relationshipLabel>
        <relationshipName>Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamilyCode__c</fullName>
        <label>Product Family Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductForm__c</fullName>
        <label>Form</label>
        <picklist>
            <picklistValues>
                <fullName>Beads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crystal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directly Compressible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Crystal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Granular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pellet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablets</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>Product2Id__r.Product_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <description>Product Manager from the Product Object.</description>
        <formula>Product2Id__r.Product_Manager__r.FirstName &amp; &quot; &quot; &amp;  Product2Id__r.Product_Manager__r.LastName</formula>
        <label>Product Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sub Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <formula>CreatedBy.UserRoleId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>What was the source of the competitive price?</description>
        <inlineHelpText>What was the source of the competitive price?</inlineHelpText>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Written - Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written - Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specific_Use__c</fullName>
        <description>To match Specific Use field on Opportunity and Sample Request.  Changed from Specific Use to &quot;Application&quot; per Shirley Schumacher,</description>
        <label>Application</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StockProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Total_Pounds__c</fullName>
        <label>Supplier Total Pounds</label>
        <summarizedField>CPP_Supplier_Info__c.Annual_LBS_by_Supplier__c</summarizedField>
        <summaryForeignKey>CPP_Supplier_Info__c.CPP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME HARDESTY COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acme Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACP Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afton Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airgas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Pigment Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBEMARLE CORPORATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberdingk-Boley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albright &amp; Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcan Intl Network US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alco Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allchem Ind</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Spend__c</fullName>
        <label>Total Annual Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to last non-System Admin to modify this Sales Call. Modifiable by Apex only.</description>
        <label>User Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserLastModifiedDate__c</fullName>
        <description>Non-Admin user who last modified this CPP. Initially populated by DemandTools and visible only to Admins. Later may add workflow to keep current.</description>
        <label>User Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <formula>CreatedBy.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>The CPP data is valid as of this date.</inlineHelpText>
        <label>CPP Validation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waste__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waste</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Volume__c</fullName>
        <formula>AnnualUsageInPounds__c  /  Annual_LBS_by_Supplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>CPP</label>
    <listViews>
        <fullName>AllCPP</fullName>
        <columns>NAME</columns>
        <columns>AccountId__c</columns>
        <columns>Product2Id__c</columns>
        <columns>ProductDescription__c</columns>
        <columns>Supplier__c</columns>
        <columns>Producer__c</columns>
        <columns>AnnualUsageInPounds__c</columns>
        <columns>Validated__c</columns>
        <filterScope>Everything</filterScope>
        <label>CPPs: ALL visable to me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CPPs</fullName>
        <columns>NAME</columns>
        <columns>AccountId__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product2Id__c</columns>
        <columns>ProductDescription__c</columns>
        <columns>Grade__c</columns>
        <columns>AnnualUsageInPounds__c</columns>
        <columns>Supplier__c</columns>
        <columns>Producer__c</columns>
        <columns>PriceperUOM__c</columns>
        <columns>PricingUOM__c</columns>
        <columns>Source__c</columns>
        <columns>Barrier_to_Opportunity__c</columns>
        <columns>Validated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All CPPs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPPs_without_Product</fullName>
        <columns>NAME</columns>
        <columns>AccountId__c</columns>
        <columns>Product2Id__c</columns>
        <columns>Grade__c</columns>
        <columns>Supplier__c</columns>
        <columns>Producer__c</columns>
        <columns>Barrier_to_Opportunity__c</columns>
        <columns>AnnualUsageInPounds__c</columns>
        <columns>PriceperUOM__c</columns>
        <columns>PricingUOM__c</columns>
        <columns>Source__c</columns>
        <columns>Validated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product2Id__c</field>
            <operation>equals</operation>
        </filters>
        <label>CPPs without Product</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPPs_without_Supplier</fullName>
        <columns>NAME</columns>
        <columns>AccountId__c</columns>
        <columns>Supplier__c</columns>
        <columns>Product2Id__c</columns>
        <columns>AnnualUsageInPounds__c</columns>
        <columns>Barrier_to_Opportunity__c</columns>
        <columns>Source__c</columns>
        <columns>Validated__c</columns>
        <columns>PriceperUOM__c</columns>
        <columns>PricingUOM__c</columns>
        <columns>Grade__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Supplier__c</field>
            <operation>equals</operation>
        </filters>
        <label>CPPs without Supplier</label>
        <language>en_US</language>
    </listViews>
</CustomObject>